# nvcloud-api-and-bot

./: .gitignore  Dockerfile  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 219c78b9861e_create_ticket_container_upd.py  561c978d6c59_create_tg_user_upd_v2.py  571b74c4eb67_tg_user_upd_v4.py  59b1079dea27_one.py  60386b763c55_create_tg_user.py  603a0c04ee47_tg_user_upd_v5.py  79b169d87c71_tg_user_upd_v7.py  7a663fe8f5d4_add_password_in_user_and_deleted_attr_.py  7d579a90e689_tg_user_upd_v6.py  89a4c0bbffdc_create_ticket_container.py  cc8d1d30ddae_tg_user_upd_v3.py  dd21611b4855_create_tg_user_upd.py
src/app/: bootstrap.py  main.py
src/app/bot/: __init__.py
src/app/bot/builder/: bot_manager.py  dispatcher_manager.py  instance_bot.py  instance_redis_storage.py
src/app/bot/callback_data/: container.py
src/app/bot/filters/: __init__.py  chat_type_filter.py
src/app/bot/locales/: safe_format.py
src/app/bot/routers/: __init__.py  base.py  helper.py
src/app/config/: __init__.py  api.py  bot.py  database.py  logging.py  proxmox.py  redis.py  settings.py
src/app/core/dto/: container.py
src/app/core/security/: jwt.py  password.py
src/app/domain/models/: base.py  container.py  tg_user.py  ticket_container.py  user.py
src/app/domain/providers/: container.py
src/app/domain/repo/: base.py  container.py  tg_user.py  ticket_container.py  user.py
src/app/domain/schemas/: user.py
src/app/domain/services/: container.py  tg_user.py  user.py
src/app/domain/uow/: abstract.py
src/app/domain/use_cases/: auth_user.py  info_user.py
src/app/infra/: logging.py
src/app/infra/database/: session.py
src/app/presentation/: __init__.py  builder.py
(+52 files in other folders)
